next
----
-bsml2gff3 - Added gbrowse_dbxref_map parameter
-mugsyalig_distributed_work.xml, j_ortholog_clusters_distributed_work.xml, pangenome_blast_parse_distributed_work.xml, pangenome_do_analysis_distributed_work.xml: added these xmls that contain distributed commands
-mugsyalign.xml, j_ortholog_clusters.xml, pangenome_blast_parse.xml, pangenome_do_analysis.xml: modified so that all distributed commands are placed in their own files and then called as remote-serial. This way they can be run on any cluster and on igs grid with out choking the master node at IGS.
-genbank2bsml.i1.xml, mugsyprep.xml, mugsyprep.mugsymap.xml, muscle.i1.xml : changed $;TMP_DIR$; to $;OUTPUT_DIRECTORY$; and added create req dir commands to iterator files
-software.config : added MUGSY_EXEC variable for mugsyalign component
-mugsyaling.xml : added MUGSY_EXEC variable instead of hard typing the mugsy path; added OTHER_OPTS 
-tag_data.pl: Before file1,file2,file3 only works. Changed code so that file1, file2  file3,   file4 also works
-create_file_iterator_list.pl: changed file extension matching regex to allow digits
-fastq_to_CA: new component
-tag_data: updated to make use of vappio add-config-metadata-to-tag metric
-core_qiime component uses a new flag (-f) which overwrites it's working directory
-added key=value feature to tag_data.pl
-dataprep_dual16S.pl: now has >2400 artificial barcodes for clovr16S analysis
-$;R_EXEC$; - a variable that holds path to R program is added to software.config and to pangenome_make_graphs component
-uclust_replicate_removal: new component and program for removing artificial pyrosequencing replicates from uclust output. component is called: uclust_remove_replicates
-metagenemark: new component
-clovrdownload: Commented out moving downloaded output from /mnt/data to user specified out directory. This is done as the tags are not being updated.