@@ -1,0 +1,39 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
+<commandSetRoot xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation='commandSet.xsd'>
+    <commandSet type="serial">
+        <state>incomplete</state>
+        <name>bowtie workflow</name>
+        <!--Processing-->
+        <command>
+            <type>RunUnixCommand</type>
+            <name>create output directory</name>
+            <state>incomplete</state>
+            <executable>mkdir</executable>
+            <arg>-p -m 777 $;OUTPUT_DIRECTORY$;</arg>
+        </command>
+        <command>
+            <type>RunUnixCommand</type>
+            <name>create temp directory</name>
+            <state>incomplete</state>
+            <executable>mkdir</executable>
+            <arg>-p -m 777 $;TMP_DIR$;</arg>
+        </command>
+
+        <command>
+            <type>RunDistributedCommand</type>
+            <name>Bowtie align</name>
+            <state>incomplete</state>
+            <executable>$;BIN_DIR$;/bowtie.pl</executable>            
+            <param>
+            <key>stdout</key>
+            <value>$;OUTPUT_DIRECTORY$;/align.stdout</value>
+            </param>
+            <param>
+            <key>stderr</key>
+            <value>$;OUTPUT_DIRECTORY$;/align.stderr</value>
+            </param>
+            <arg>--bowtie_exec=$;BOWTIE_EXEC$; --reference=$;REFERENCE$; --reads=$;Q$;,$;Q2$; --sam_output=$;SAM_OUTPUT$; --max_insert=$;X$; --max_mismatches=$;V$; --max_aligns=$;M$; --more_options=$;OTHER_OPTS$;</arg>
+        </command>
+    </commandSet>
+</commandSetRoot>
