@@ -1,0 +1,40 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
+<commandSetRoot xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation='commandSet.xsd'>
+    <commandSet type="serial">
+        <state>incomplete</state>
+        <name>bowtie_build workflow</name>
+        <!--Processing-->
+        <command>
+            <type>RunUnixCommand</type>
+            <name>create output directory</name>
+            <state>incomplete</state>
+            <executable>mkdir</executable>
+            <arg>-p -m 777 $;OUTPUT_DIRECTORY$;</arg>
+        </command>
+        <command>
+            <type>RunUnixCommand</type>
+            <name>create temp directory</name>
+            <state>incomplete</state>
+            <executable>mkdir</executable>
+            <arg>-p -m 777 $;TMP_DIR$;</arg>
+        </command>
+
+        <command>
+            <type>RunUnixCommand</type>
+            <name>Bowtie build index</name>
+            <state>incomplete</state>
+            <executable>$;BOWTIE_BUILD_EXEC$;</executable>            
+            <param>
+            <key>stdout</key>
+            <value>$;OUTPUT_DIRECTORY$;/build.stdout</value>
+            </param>
+            <param>
+            <key>stderr</key>
+            <value>$;OUTPUT_DIRECTORY$;/build.stderr</value>
+            </param>
+            <arg>$;OTHER_BUILD_ARGS$; -f $;REFERENCE$; $;OUTPUT_DIRECTORY$;/reference</arg>
+        </command>
+
+    </commandSet>
+</commandSetRoot>
