@@ -1,5 +1,6 @@
 next
 ----
+-bowtie: new component
 -bsml2gff3 - Added gbrowse_dbxref_map parameter
 -mugsyalig_distributed_work.xml, j_ortholog_clusters_distributed_work.xml, pangenome_blast_parse_distributed_work.xml, pangenome_do_analysis_distributed_work.xml: added these xmls that contain distributed commands
 -mugsyalign.xml, j_ortholog_clusters.xml, pangenome_blast_parse.xml, pangenome_do_analysis.xml: modified so that all distributed commands are placed in their own files and then called as remote-serial. This way they can be run on any cluster and on igs grid with out choking the master node at IGS.
